src/App.css
@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600;700&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;



@layer base {
    html {
        font-family: 'Instrument Sans', sans-serif;
        margin: 0;
        padding: 0;
    }
    #root {
        background-color: #FAFAFA;
    }
  }

